# carma-carla-integration

./: Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  dockerhub.yml  runtest.yml
.sonarqube/: sonar-scanner.properties
PythonAPI/examples/: get_traffic_light.py
PythonAPI/util/: map_loading.py
carla_sensors_integration/: CMakeLists.txt  package.xml
carla_sensors_integration/include/: carla_sensors_integration.h  carla_sensors_integration_node.h  carla_sensors_integration_worker.h
carla_sensors_integration/launch/: carla_sensors_integration.launch
carla_sensors_integration/src/: carla_sensors_integration.cpp  carla_sensors_integration_node.cpp  carla_sensors_integration_worker.cpp  main.cpp
carla_sensors_integration/test/: test_carla_sensors.cpp
carma-carla-integration/carla-health-poll/: README.md
carma-carla-integration/carla-health-poll/src/: wait_for_carla.py
carma-carla-integration/carla_sensors_integration/: CMakeLists.txt  package.xml
carma-carla-integration/carla_sensors_integration/include/: carla_sensors_integration_node.h  carla_sensors_integration_worker.h
carma-carla-integration/carla_sensors_integration/launch/: carla_sensors_integration.launch
carma-carla-integration/carla_sensors_integration/src/: carla_sensors_integration_node.cpp  carla_sensors_integration_worker.cpp
carma-carla-integration/carma-carla-agent/: CMakeLists.txt  package.xml
carma-carla-integration/carma-carla-agent/agent/: bridge.launch
carma-carla-integration/carma-carla-agent/agent/config/: sensors.json
carma-carla-integration/carma-carla-agent/launch/: carma_carla_agent.launch
carma-carla-integration/carma-carla-bridge/: CMakeLists.txt  package.xml  setup.py
carma-carla-integration/carma-carla-bridge/launch/: carma_carla_bridge.launch
carma-carla-integration/carma-carla-bridge/src/carma_carla_bridge/: carla_to_carma_external_objects  carla_to_carma_localization  carla_to_carma_sensor_external_objects  carla_to_carma_vehicle_status  carma_carla_guidance  carma_carla_plugins  carma_carla_route
carma-carla-integration/data_stream_toggle/: CMakeLists.txt  package.xml
carma-carla-integration/data_stream_toggle/include/: data_stream_toggle.h
carma-carla-integration/data_stream_toggle/launch/: data_stream_toggle.launch
carma-carla-integration/data_stream_toggle/src/: data_stream_toggle.cpp  main.cpp
config/: global_config.json  vehicle_config.json  version_config.json
docker/: build-image.sh  carma_start_sim_mode.sh  checkout.sh  docker-compose.yml  docker_compose_generator.sh  install.sh  run.sh
patch/: settings.yaml
(+1 files in other folders)
