<?xml version="1.0"?>
<package format="2">
  <name>carma_carla_agent</name>
  <version>0.0.1</version>
  <description>The carma_carla_agent package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache 2.0 License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>carma_carla_bridge</exec_depend>
</package>
